[ci skip] Crowdin translation bot: New translations for Arabic

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -395,4 +395,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="matches">مباراة</string>
     <string name="search_replace_pattern_error_message">البحث أو استبدال خطأ النقش.</string>
     <string name="newline_is_new_paragraph">الخط الجديد = فقرة جديدة</string>
+    <string name="additional_contexts_and_projects">سياقات ومشاريع إضافية</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">أدخل @contexts و +مشاريع. ستكون هذه دائما مرئية في todo.txt إدخال الحوار.</string>
 </resources>
