[ci skip] Crowdin translation bot: New translations for Japanese

--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -395,4 +395,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="matches">一致</string>
     <string name="search_replace_pattern_error_message">検索または置換パターンエラー。</string>
     <string name="newline_is_new_paragraph">format@@0 = 新しい段落</string>
+    <string name="additional_contexts_and_projects">追加のコンテキストとプロジェクト</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">スペースで区切られた @contexts と +projects を入力してください。これらは常に todo.txt のダイアログで表示されます。</string>
 </resources>
