--- a/app/src/main/res/values-ca/strings.xml
+++ b/app/src/main/res/values-ca/strings.xml
@@ -395,4 +395,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="matches">Coincidències</string>
     <string name="search_replace_pattern_error_message">Error amb el patró de cerca o reemplaçament.</string>
     <string name="newline_is_new_paragraph">Nova línia = paràgraf nou</string>
+    <string name="additional_contexts_and_projects">Contextos i projectes addicionals</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">Introduïu @contextos i +projectes separats per espais. Aquests sempre seran visibles als quadres de diàleg d\'inserció del todo.txt.</string>
 </resources>
