--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -395,4 +395,6 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="matches">Corrispondenze</string>
     <string name="search_replace_pattern_error_message">Errore di ricerca o sostituzione.</string>
     <string name="newline_is_new_paragraph">Newline = nuovo paragrafo</string>
+    <string name="additional_contexts_and_projects">Contesti e progetti aggiuntivi</string>
+    <string name="enter_space_seperated_contexts_and_projects_these_will">Inserisci @contesti e +progetti separati da spazi. Essi saranno sempre visibili nelle finestre di inserimento per todo.txt.</string>
 </resources>
