--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -121,6 +121,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="files_and_folders">فایل‌ها و پوشه‌ها</string>
     <string name="document_browser">مرورگر پرونده</string>
     <string name="file_browser">کاوش فایل ها</string>
+    <string name="set_due_date">Set due date</string>
     <string name="create_note" needed="false">ایجاد یادداشت</string>
     <string name="special_documents" needed="false">مطالب ویژه</string>
     <string name="keep_screen_on" needed="false">روشن نگه داشتن صفحه نمایش</string>
