--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -189,7 +189,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="start_on_bottom_when_loading_document">Po załadowaniu dokumentu ustaw kursor na jego końcu</string>
     <string name="unordered_list_character">Nieuporządkowany znak z listy</string>
     <string name="character_to_start_items_of_unordered_list_with">Który znak ma być użyty do oznaczenia nieuporządkowanych list</string>
-    <string name="unordered_list_char_dash">MSSF 7 pkt 20 lit. a) ppkt (ii); MSR 39 pkt 9</string>
+    <string name="unordered_list_char_dash">Myślnik (-)</string>
     <string name="unordered_list_char_asterisk">Asterisk (*)</string>
     <string name="unordered_list_char_plus">Plus (+)</string>
     <string name="filemanager_doesnot_supply_required_data__appspecific">Markor może tylko edytować zapisane lokalnie, dostępne offline pliki oraz nie wspiera menedżerów plików, które nie zapewniają pełnej ścieżki pliku.</string>
@@ -228,7 +228,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="descending">malejąco</string>
     <string name="ascending">rosnąco</string>
     <string name="disable_spelling_underline">Wyłącz podkreślanie pisowni</string>
-    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Zostały sugestie klawiatury, czerwone podkreślenia znikają</string>
+    <string name="spellcheck_keyboard_suggestion_stay_red_underline_vanishes">Zostają sugestie klawiatury, czerwone podkreślenia znikają</string>
     <string name="location">Lokalizacja</string>
     <string name="text_lines">Linie tekstu</string>
     <string name="text_characters">Znaki tekstu</string>
@@ -309,7 +309,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="app_start_folder">Folder startowy aplikacji</string>
     <string name="tab_width">Szerokość tabulatora</string>
     <string name="amount_of_space_for_tab">Ilość spacji za tabulator</string>
-    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Wybrany plik może być plikiem zwykłym. Czy chcesz otworzyć go w edytorze czy w innej aplikacji?\n\nNie próbuj otwierać plików binarnych. Jeśli nie jesteś pewien, otwórz za pomocą innej aplikacji.</string>
+    <string name="selected_file_may_be_a_textfile_want_to_open_in_editor">Wybrany plik może być zwykłym plikiem tekstowym. Czy chcesz otworzyć go w edytorze czy w innej aplikacji?\n\nNie próbuj otwierać plików binarnych. Jeśli nie jesteś pewien, otwórz za pomocą innej aplikacji.</string>
     <string name="list_in_recent_files">Lista w ostatnich plikach</string>
     <string name="reload">Przeładuj</string>
     <string name="wrap_words">Zawijanie słów</string>
@@ -321,7 +321,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="send_debug_log">Wyślij dziennik debugowania</string>
     <string name="help_by_sending_debug_information_to_the_developer">Pomóż wysyłając informacje debugowania do programisty. Dane są wysyłane pocztą elektroniczną za pośrednictwem aplikacji e-mail i można zobaczyć wszystkie wysłane dane przed wysłaniem. Po włączeniu w górnym menu znajdziesz dodatkową opcję \"Wyślij dziennik debugowania\". Tworzy to szkic e-mail.</string>
     <string name="print_pdf">Drukuj PDF</string>
-    <string name="bigger_headings">Większe kursy</string>
+    <string name="bigger_headings">Większe nagłówki</string>
     <string name="increase_text_size_of_headings_according_to_level">Zwiększ rozmiar tekstu nagłówków zgodnie z poziomem (# h1, ## h2. ### h3…)</string>
     <string name="current">Bieżący</string>
     <string name="record_audio">Nagraj dźwięk</string>
@@ -343,17 +343,17 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="common_color_picker">Próbnik kolorów</string>
     <string name="date_and_time">Data i godzina</string>
     <string name="jump_to_bottom">Skocz do dołu</string>
-    <string name="quote">Oferta</string>
+    <string name="quote">Cytat</string>
     <string name="heading">Nagłówek</string>
-    <string name="heading_1">Dział 1</string>
-    <string name="heading_2">Dział 2</string>
-    <string name="heading_3">Dział 3</string>
-    <string name="heading_4">Dział 4</string>
-    <string name="heading_5">Dział 5</string>
+    <string name="heading_1">Poziom 1</string>
+    <string name="heading_2">Poziom 2</string>
+    <string name="heading_3">Poziom 3</string>
+    <string name="heading_4">Poziom 4</string>
+    <string name="heading_5">Poziom 5</string>
     <string name="bold">Pogrubiony</string>
     <string name="italic">Kursywa</string>
     <string name="highlighted">Wyróżniony</string>
-    <string name="strikeout">Uderzenie</string>
+    <string name="strikeout">Przekreślony</string>
     <string name="inline_code">Kod liniowy</string>
     <string name="horizontal_line">Linia pozioma</string>
     <string name="toggle_done">Przełącz wykonane</string>
@@ -392,7 +392,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_with">Zamień na</string>
     <string name="replace_once">Zastąp (1)</string>
     <string name="replace_all">Zastąp wszystkie</string>
-    <string name="matches">Mecze</string>
+    <string name="matches">Dopasowania</string>
     <string name="search_replace_pattern_error_message">Błąd wyszukiwania lub zastępowania wzorca.</string>
     <string name="newline_is_new_paragraph">Nowa linia = nowy ustęp</string>
     <string name="additional_contexts_and_projects">Dodatkowe konteksty i projekty</string>
