--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -394,6 +394,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">استبدال الكل</string>
     <string name="matches">مباراة</string>
     <string name="search_replace_pattern_error_message">البحث أو استبدال خطأ النقش.</string>
+    <string name="backup_settings">إعدادات النسخ الاحتياطي</string>
+    <string name="restore_settings">إستعادة الإعدادات</string>
+    <string name="failed_to_create_backup">فشل إنشاء نسخة احتياطية</string>
+    <string name="export_settings_to_json_file">تصدير الإعدادات إلى ملف json</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">استيراد الإعدادات من ملف json الاحتياطي. عند النجاح، يتم إعادة تشغيل التطبيق.</string>
+    <string name="failed_to_restore_settings_from_backup">فشل في استعادة الإعدادات من النسخة الاحتياطية</string>
     <string name="newline_is_new_paragraph">الخط الجديد = فقرة جديدة</string>
     <string name="additional_contexts_and_projects">سياقات ومشاريع إضافية</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">أدخل @contexts و +مشاريع. ستكون هذه دائما مرئية في todo.txt إدخال الحوار.</string>
