--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -394,6 +394,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Korvaa kaikki</string>
     <string name="matches">Ottelut</string>
     <string name="search_replace_pattern_error_message">Etsi tai korvaa kuvion virhe.</string>
+    <string name="backup_settings">Varmuuskopioi asetukset</string>
+    <string name="restore_settings">Palauta asetukset</string>
+    <string name="failed_to_create_backup">Varmuuskopion luonti epäonnistui</string>
+    <string name="export_settings_to_json_file">Vie asetukset json tiedostoon</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Tuo asetukset varmuuskopion json tiedostosta. Onnistui, sovellus käynnistetään uudelleen.</string>
+    <string name="failed_to_restore_settings_from_backup">Asetusten palautus varmuuskopiosta epäonnistui</string>
     <string name="newline_is_new_paragraph">Uusi kohta = uusi kohta</string>
     <string name="additional_contexts_and_projects">Lisätaustat ja -hankkeet</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Syötä välilyönti erotettu @kontekstit ja +projektit. Nämä näkyvät aina osoitteessa: todo.txt insert dialogit.</string>
