--- a/app/src/main/res/values-ja/strings.xml
+++ b/app/src/main/res/values-ja/strings.xml
@@ -394,6 +394,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">すべて置換</string>
     <string name="matches">一致</string>
     <string name="search_replace_pattern_error_message">検索または置換パターンエラー。</string>
+    <string name="backup_settings">設定をバックアップ</string>
+    <string name="restore_settings">設定を復元</string>
+    <string name="failed_to_create_backup">バックアップの作成に失敗しました</string>
+    <string name="export_settings_to_json_file">json ファイルに設定をエクスポート</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">バックアップ json ファイルから設定をインポートします。アプリを再起動します。</string>
+    <string name="failed_to_restore_settings_from_backup">バックアップから設定を復元できませんでした</string>
     <string name="newline_is_new_paragraph">format@@0 = 新しい段落</string>
     <string name="additional_contexts_and_projects">追加のコンテキストとプロジェクト</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">スペースで区切られた @contexts と +projects を入力してください。これらは常に todo.txt のダイアログで表示されます。</string>
