--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -394,6 +394,12 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Substituir tudo</string>
     <string name="matches">Ocorrências</string>
     <string name="search_replace_pattern_error_message">Erro ao pesquisar ou substituir.</string>
+    <string name="backup_settings">Configurações do backup</string>
+    <string name="restore_settings">Restaurar configurações</string>
+    <string name="failed_to_create_backup">Falha ao criar backup</string>
+    <string name="export_settings_to_json_file">Exportar configurações para arquivo json</string>
+    <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importe as configurações do arquivo json de backup. Em caso de sucesso, o aplicativo é reiniciado.</string>
+    <string name="failed_to_restore_settings_from_backup">Falha ao restaurar as configurações do backup</string>
     <string name="newline_is_new_paragraph">Nova linha = novo parágrafo</string>
     <string name="additional_contexts_and_projects">Contextos e projetos adicionais</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Insira um espaço separado por @contextos e +projetos. Estes sempre estarão visíveis em todo.txt inserindo diálogos.</string>
