[ci skip] Crowdin translation bot: New translations for Sardinian

--- a/app/src/main/res/values-sc/strings.xml
+++ b/app/src/main/res/values-sc/strings.xml
@@ -394,6 +394,9 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="replace_all">Remplasa totu</string>
     <string name="matches">Currispondèntzias</string>
     <string name="search_replace_pattern_error_message">Faddina de chirca o de remplasamentu.</string>
+    <string name="backup_settings">Impostatziones de sas còpias de seguresa</string>
+    <string name="restore_settings">Riprìstina sas impostatziones</string>
+    <string name="failed_to_create_backup">Creatzione de sa còpia de seguresa fallida</string>
     <string name="newline_is_new_paragraph">Lìnia noa = paràgrafu nou</string>
     <string name="additional_contexts_and_projects">Cuntestos e progetos additzionales</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Inserta @cuntestos e +progetos iscrobados dae ispàtzios. Custos ant a èssere semper visìbiles in sas ventanas de diàlogu de insertadura de todo.txt.</string>
