[ci skip] Crowdin translation bot: New translations for Polish

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -27,6 +27,7 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="create_folder">Utwórz folder</string>
     <string name="create_new_document">Utwórz nowy dokument</string>
     <string name="move">Przenieś</string>
+    <string name="copy">Kopiuj</string>
     <string name="info">Informacje</string>
     <string name="file_folder_already_exists_please_use_a_different_name">Plik/katalog już istnieje! Proszę użyć innej nazwy</string>
     <string name="import_from_device">Importuj z urządzenia</string>
@@ -401,6 +402,13 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="import_settings_from_backup_json_file_on_success_the_app_is_restarted">Importuj ustawienia z kopii zapasowej pliku json. Po pomyślnym uruchomieniu aplikacji.</string>
     <string name="failed_to_restore_settings_from_backup">Nie udało się przywrócić ustawień z kopii zapasowej</string>
     <string name="newline_is_new_paragraph">Nowa linia = nowy ustęp</string>
+    <string name="keep_both">Zachowaj oba</string>
+    <string name="skip">Pomiń</string>
+    <string name="overwrite">Nadpisz</string>
+    <string name="keep_both_all">Zachowaj oba (wszystkie)</string>
+    <string name="skip_all">Pomiń (wszystkie)</string>
+    <string name="overwrite_all">Nadpisz (wszystkie)</string>
+    <string name="copy_move_conflict_message">\'%s\' już istnieje w %s</string>
     <string name="additional_contexts_and_projects">Dodatkowe konteksty i projekty</string>
     <string name="enter_space_seperated_contexts_and_projects_these_will">Wprowadź oddzielone spacjami @contexts i +projekty. Będą one zawsze widoczne w oknie dialogowym wstawiania todo.txt.</string>
 </resources>
